2015-11-05 Martin Grønholdt

* Makefile: Added free ROM messages to target flashfs.
* fs/Makefile: css-html-js-minify.py cripples the javescript files, so skip them.
* fs/root_src/404.html: Removed extra </div>.
* fs/root_src/about.html: Changed h2 to H3 like everywhere else.
						  Added firmware version.
* fs/root_src/connect/hostname.html: Use request.js.
* fs/root_src/connect/index.html: Fixed div.
								  Use request.js.
* fs/root_src/connect/nets.html: Use request.js.
* fs/root_src/connect/passwd.html: Use request.js.
* fs/root_src/index.html: Use request.js.
* fs/root_src/js/atomic.js: Removed, no longer used.
* fs/root_src/connect/js/request.js: Link to fs/root_src/js/request.js.
* fs/root_src/js/request.js: New file. Request function.
* user/slighttp/http-request.c (http_get_headers_size): Removed unused variable.
* user/user_main.c (connected): Don' expose network REST API in default mode.


2015-11-04 Martin Grønholdt

* build.sh: Added option to clean and debugflash.
* Makefile: Changed wording in free ROM messages to match mem_usage script.
* user/handlers/fs/http-fs.c: Optimise for size.
							 (http_fs_init): Don't complain when setting new root.

2015-11-03 Martin Grønholdt

* Makefile: Added list output of largest functions and objects in user code.
			Corrected comment.
			distclean target.
* mk/config.mk: Add N_LIST_OBJECTS, control the number entries in object/function lists.
* mk/linux.mk: Added readelf.
* user/fs/dbffs-std.h: Added DBFFS_MAX_HEADER_SIZE.
* user/fs/dbffs.c: Optimise for size.
* user/slighttp/http-request.c (http_get_request_type): Optimise for size.
* fs/Makefile: distclean target.
* user/handlers/rest/gpio.c: Use http_simple_GET_PUT_handler.


2015-10-26 Martin Grønholdt

* user/debug.c (db_alloc): Fixed a some debug output errors.
			   (db_realloc): Fixed a some debug output errors.
* user/handlers/rest/gpio.c (create_eneabled_response): Using JSON generator.