@@ -1,3 +1,11 @@
+2015-11-08 Martin Grønholdt
+
+* user/task.*: Added task handling code.
+* user/user_main.c (start_connection): Added task handler init.
+* user/user_config.h: Added definitions for physical pin connections.
+* fs/Makefile: Run minify on fs in debug mode as well.
+
+
 2015-11-05 Martin Grønholdt
 
 * Makefile: Added free ROM messages to target flashfs.
